--- a/taller1_UsoDeListas.ipynb
+++ b/taller1_UsoDeListas.ipynb
@@ -32,8 +32,8 @@
         "id": "w90u5lP69rNo"
       },
       "source": [
-        "#a) Solicitar al usuario que digite las 4 notas del estudiante 1\n",
-        "#b) Calcular el promedio de las notas del estudiante 1  mediante una lista"
+        "#a) Solicitar al usuario que digite las 4 notas del estudiante 1,\n",
+        "#b) Calcular el promedio de las notas del estudiante 1  mediante una lista."
       ],
       "execution_count": null,
       "outputs": []
