--- a/taller2_UsoDeDiccionarios.ipynb
+++ b/taller2_UsoDeDiccionarios.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "taller2_UsoDeDiccionarios.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM/S6m4N3+f0KTo2NzZeoHV",
+      "authorship_tag": "ABX9TyP4q83tjzzAXfinahp+Eziw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,21 +28,53 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "cjH1A3IXsjnT"
+        "id": "VAKtr6ANvpmw"
       },
       "source": [
-        "####   Crear una  funcion  llamada   frecuencia_caracteres  que llene  un diccionario con   el numero de apariciones de cada caracter de una cadena\n",
-        "####  Ejemplo    frecuencia_caracteres('Munddo')    \n",
-        "####  Resultado esperado    {'M': 1, 'u': 1, 'n': 1, 'd': 2, 'o': 1}\n",
+        "**Imprimir 'hello'  dado las estructuras**\n",
         "\n",
         "\n",
+        "1.   lst = [1,2,[3,4],[5,[100,200,['hello']],23,11],1,7]\n",
+        "2.   d1 = {'target':[1,2,3,'hello']}\n",
+        "3.   d2 = ['oh','man','inception',{'target':[1,2,3,'hello']}]\n",
+        "4.   d3 = {'k1':[1,2,3,{'tricky':['oh','man','inception',{'target':[1,2,3,'hello']}]}]}\n",
         "\n",
-        " "
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "IswKOjtkvx3i"
+      },
+      "source": [
+        "   **Crear una  funcion  llamada   frecuencia_caracteres  que llene  un diccionario con   el numero de apariciones de cada caracter de una cadena**\n",
+        "     Ejemplo    frecuencia_caracteres('Munddo')    \n",
+        "     Resultado esperado    {'M': 1, 'u': 1, 'n': 1, 'd': 2, 'o': 1}"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5DbQ1Ds1whM5"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Y8Okhe8AvsxN"
+      },
+      "source": [
+        ""
+      ]
     }
   ]
 }
