--- a/taller2_UsoDeDiccionarios.ipynb
+++ b/taller2_UsoDeDiccionarios.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "taller2_UsoDeDiccionarios.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP4q83tjzzAXfinahp+Eziw",
+      "authorship_tag": "ABX9TyM393mKX/7x8PZxiwJhHwTx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,15 +57,20 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "5DbQ1Ds1whM5"
+        "id": "eNbjnJIkVY4n"
       },
       "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
+        "**Adicionar un nuevo piloto  al diccionario diccionario**\n",
+        "- modificarlo\n",
+        "- buscarlo por llave \n",
+        "- buscarlo por valor\n",
+        "- usar el metodo pop  para borrarlo \n",
+        "- usar el instruccion del   para borrarlo \n",
+        "\n",
+        "diccionario = {'Piloto 1':'Fernando Alonso', 'Piloto 2':'Kimi Raikkonen', 'Piloto 3':'Felipe Massa'}"
+      ]
     },
     {
       "cell_type": "markdown",
