--- a/taller2_UsoDeDiccionarios.ipynb
+++ b/taller2_UsoDeDiccionarios.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "taller2_UsoDeDiccionarios.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM393mKX/7x8PZxiwJhHwTx",
+      "authorship_tag": "ABX9TyOIhXcxZ50E7DcZshdy4Qeu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,6 +43,33 @@
         "\n",
         "\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4X2WaTlGWBmj",
+        "outputId": "d436098c-86d2-49a5-fd20-d21270234bcf"
+      },
+      "source": [
+        "lst = [1,2,[3,4],[5,[100,200,['hello']],23,11],1,7]\n",
+        "lst[3][1][2]"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['hello']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
       ]
     },
     {
