--- a/taller2_UsoDeDiccionarios.ipynb
+++ b/taller2_UsoDeDiccionarios.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "taller2_UsoDeDiccionarios.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOIhXcxZ50E7DcZshdy4Qeu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -73,6 +72,100 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XXytd7ghYlKE",
+        "outputId": "92d86bf5-7251-401c-af43-0fc0b1c89ac5",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "source": [
+        "d1 = {'target':[1,2,3,'hello']}\n",
+        "\n",
+        "d1['target'][3]"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'hello'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "X06vkBXCabYK",
+        "outputId": "0fbdfc1a-9a46-4842-d239-38e083556a39",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "source": [
+        "d2 = ['oh','man','inception',{'target':[1,2,3,'hello']}]\n",
+        "d2[3]['target'][3]"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'hello'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KqpSnL3EbM1g",
+        "outputId": "07feb29e-eb40-41ca-b7a7-37eef86ef36f",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "source": [
+        "d3 = {'k1':[1,2,3,{'tricky':['oh','man','inception',{'target':[1,2,3,'hello']}]}]}\n",
+        "d3['k1'][3]['tricky'][3]['target'][3]"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'hello'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "IswKOjtkvx3i"
@@ -81,6 +174,53 @@
         "   **Crear una  funcion  llamada   frecuencia_caracteres  que llene  un diccionario con   el numero de apariciones de cada caracter de una cadena**\n",
         "     Ejemplo    frecuencia_caracteres('Munddo')    \n",
         "     Resultado esperado    {'M': 1, 'u': 1, 'n': 1, 'd': 2, 'o': 1}"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vBLnriGRc4I1",
+        "outputId": "9600f95e-af41-4896-f5f9-bc647a9d5cca"
+      },
+      "source": [
+        "def  frecuencia_caracteres(palabra):\n",
+        "##palabra = \"Mundo\"\n",
+        "    conteo = {}\n",
+        "    ##print (len(palabra))\n",
+        "    for indice in range(len(palabra)):\n",
+        "        caracter = palabra[indice]\n",
+        "        conteo [caracter] = 1  + conteo.get( caracter, 0)\n",
+        "   ## print(conteo.items())\n",
+        "    return conteo\n",
+        "        \n",
+        "print (frecuencia_caracteres('MMUUUNNNNDDDDDOOOOOO'))\n",
+        "\n",
+        "dic = frecuencia_caracteres('MMUUUNNNNDDDDDOOOOOO')\n",
+        "dic ['M']+1\n",
+        "dic\n"
+      ],
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'M': 2, 'U': 3, 'N': 4, 'D': 5, 'O': 6}\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'D': 5, 'M': 2, 'N': 4, 'O': 6, 'U': 3}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 52
+        }
       ]
     },
     {
