--- a/taller2_UsoDeDiccionarios.ipynb
+++ b/taller2_UsoDeDiccionarios.ipynb
@@ -75,18 +75,18 @@
       "cell_type": "code",
       "metadata": {
         "id": "XXytd7ghYlKE",
-        "outputId": "92d86bf5-7251-401c-af43-0fc0b1c89ac5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "92d86bf5-7251-401c-af43-0fc0b1c89ac5"
       },
       "source": [
         "d1 = {'target':[1,2,3,'hello']}\n",
         "\n",
         "d1['target'][3]"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -107,17 +107,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "X06vkBXCabYK",
-        "outputId": "0fbdfc1a-9a46-4842-d239-38e083556a39",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "0fbdfc1a-9a46-4842-d239-38e083556a39"
       },
       "source": [
         "d2 = ['oh','man','inception',{'target':[1,2,3,'hello']}]\n",
         "d2[3]['target'][3]"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -138,17 +138,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "KqpSnL3EbM1g",
-        "outputId": "07feb29e-eb40-41ca-b7a7-37eef86ef36f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "07feb29e-eb40-41ca-b7a7-37eef86ef36f"
       },
       "source": [
         "d3 = {'k1':[1,2,3,{'tricky':['oh','man','inception',{'target':[1,2,3,'hello']}]}]}\n",
         "d3['k1'][3]['tricky'][3]['target'][3]"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -183,7 +183,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vBLnriGRc4I1",
-        "outputId": "9600f95e-af41-4896-f5f9-bc647a9d5cca"
+        "outputId": "771c7f9e-dc69-4109-a062-215e7aae38e7"
       },
       "source": [
         "def  frecuencia_caracteres(palabra):\n",
@@ -199,10 +199,12 @@
         "print (frecuencia_caracteres('MMUUUNNNNDDDDDOOOOOO'))\n",
         "\n",
         "dic = frecuencia_caracteres('MMUUUNNNNDDDDDOOOOOO')\n",
-        "dic ['M']+1\n",
-        "dic\n"
+        "dic ['M'] = dic ['M']+1\n",
+        "dic ['D'] = dic.get( 'D', 0)+1\n",
+        "dic ['x'] = dic.get( 'x', 0)     ## crea  el  elemento x  en el diccionario  con el valor 0\n",
+        "dic \n"
       ],
-      "execution_count": 52,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -215,11 +217,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "{'D': 5, 'M': 2, 'N': 4, 'O': 6, 'U': 3}"
+              "{'D': 6, 'M': 3, 'N': 4, 'O': 6, 'U': 3, 'x': 0}"
             ]
           },
           "metadata": {},
-          "execution_count": 52
+          "execution_count": 15
         }
       ]
     },
