--- a/Taller4_dataframes_py.ipynb
+++ b/Taller4_dataframes_py.ipynb
@@ -92,7 +92,7 @@
         "id": "b7074975-8a81-44e7-8376-6c655fd916a1"
       },
       "source": [
-        "\n",
+        "import pandas as pd\n",
         "print(\"Compras de manzanas: \\n\", compras['Manzanas'])\n",
         "\n",
         "print(\"Compras de manzanas y naranjas: \\n\", compras[['Manzanas', 'Naranjas']])\n",
@@ -126,9 +126,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2a483224-88bb-4e47-8b49-b41bee6af9b9"
+        "id": "2a483224-88bb-4e47-8b49-b41bee6af9b9",
+        "outputId": "9c6703e7-5e4f-4117-b031-0fbfc71b0765",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
+        "import pandas as pd\n",
         "empresas= {'nombres':['banco Sudameris',\n",
         "                      'bAnColomBia',\n",
         "                      'BANIstmo',\n",
@@ -136,9 +141,13 @@
         "                      'Colpatria',\n",
         "                      'porVENIR']}\n",
         "\n",
+        "\n",
+        "\n",
         "df_empresas = pd.DataFrame(empresas)\n",
         "\n",
+        "print (df_empresas)\n",
         "print(df_empresas['nombres'].str.lower())\n",
+        " \n",
         "\n",
         "print(df_empresas['nombres'].str.upper())\n",
         "\n",
@@ -157,8 +166,85 @@
         "print(df_empresas['nombres'].str.lower().str.count('b'))"
       ],
       "id": "2a483224-88bb-4e47-8b49-b41bee6af9b9",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "           nombres\n",
+            "0  banco Sudameris\n",
+            "1      bAnColomBia\n",
+            "2         BANIstmo\n",
+            "3    banco popular\n",
+            "4        Colpatria\n",
+            "5         porVENIR\n",
+            "0    banco sudameris\n",
+            "1        bancolombia\n",
+            "2           banistmo\n",
+            "3      banco popular\n",
+            "4          colpatria\n",
+            "5           porvenir\n",
+            "Name: nombres, dtype: object\n",
+            "0    BANCO SUDAMERIS\n",
+            "1        BANCOLOMBIA\n",
+            "2           BANISTMO\n",
+            "3      BANCO POPULAR\n",
+            "4          COLPATRIA\n",
+            "5           PORVENIR\n",
+            "Name: nombres, dtype: object\n",
+            "0    Banco sudameris\n",
+            "1        Bancolombia\n",
+            "2           Banistmo\n",
+            "3      Banco popular\n",
+            "4          Colpatria\n",
+            "5           Porvenir\n",
+            "Name: nombres, dtype: object\n",
+            "0    15\n",
+            "1    11\n",
+            "2     8\n",
+            "3    13\n",
+            "4     9\n",
+            "5     8\n",
+            "Name: nombres, dtype: int64\n",
+            "0    [banco, Sudameris]\n",
+            "1         [bAnColomBia]\n",
+            "2            [BANIstmo]\n",
+            "3      [banco, popular]\n",
+            "4           [Colpatria]\n",
+            "5            [porVENIR]\n",
+            "Name: nombres, dtype: object\n",
+            "0    ban\n",
+            "1    bAn\n",
+            "2    BAN\n",
+            "3    ban\n",
+            "4    Col\n",
+            "5    por\n",
+            "Name: nombres, dtype: object\n",
+            "0    banco Sudameris\n",
+            "1        bAnColomBia\n",
+            "2           BANIstmo\n",
+            "3    banco occidente\n",
+            "4          Colpatria\n",
+            "5           porVENIR\n",
+            "Name: nombres, dtype: object\n",
+            "0    [ban]\n",
+            "1    [ban]\n",
+            "2    [ban]\n",
+            "3    [ban]\n",
+            "4       []\n",
+            "5       []\n",
+            "Name: nombres, dtype: object\n",
+            "0    1\n",
+            "1    2\n",
+            "2    1\n",
+            "3    1\n",
+            "4    0\n",
+            "5    0\n",
+            "Name: nombres, dtype: int64\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -175,16 +261,24 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "023a8279-3e55-42cc-bc2f-01c6f284a959"
+        "id": "023a8279-3e55-42cc-bc2f-01c6f284a959",
+        "outputId": "01ae5c42-93cd-4a6c-a7c7-52a886028075",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "ventas = pd.DataFrame({\n",
         "    \"Categoria\": [1, 2, 1, 1, 2, 1],\n",
         "    \"Producto\": [\"A\", \"B\", \"C\", \"B\", \"A\", \"A\"],\n",
-        "    \"Ventas\": [6, 2, 1, 4, 5, 2]})\n",
+        "    \"Ventas\": [6, 2, 1, 4, 5, 2],\n",
+        "    \"Nombre\": [\"7a\", 8, 4, 4, 2, \"ab\"]\n",
+        "    })\n",
         "\n",
+        "print (ventas.columns)\n",
+        "print(ventas.describe())\n",
         "print(ventas)\n",
-        "##print( ventas  [['Categoria' , 'Ventas']]  [ventas[\"Categoria\"]==1  ]   )\n",
+        "print( ventas  [['Categoria' , 'Ventas']]  [ventas[\"Categoria\"]==1  ]   )\n",
         "print(ventas.groupby('Producto').mean())\n",
         "\n",
         "print(\"\\n\")\n",
@@ -193,11 +287,77 @@
         "\n",
         "print(ventas.groupby('Producto').sum() )\n",
         "print(    ventas.groupby(['Producto'])  ['Ventas'].sum() )\n",
-        "print(ventas.groupby(['Producto' , 'Categoria']) ['Ventas'].sum().unstack()[1]  )"
+        "print(ventas.groupby(['Producto' , 'Categoria']) ['Ventas'].sum()   )\n",
+        "print(ventas.groupby(['Producto' , 'Categoria']) ['Ventas'].sum().unstack()[2]  )"
       ],
       "id": "023a8279-3e55-42cc-bc2f-01c6f284a959",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Index(['Categoria', 'Producto', 'Ventas', 'Nombre'], dtype='object')\n",
+            "       Categoria    Ventas\n",
+            "count   6.000000  6.000000\n",
+            "mean    1.333333  3.333333\n",
+            "std     0.516398  1.966384\n",
+            "min     1.000000  1.000000\n",
+            "25%     1.000000  2.000000\n",
+            "50%     1.000000  3.000000\n",
+            "75%     1.750000  4.750000\n",
+            "max     2.000000  6.000000\n",
+            "   Categoria Producto  Ventas Nombre\n",
+            "0          1        A       6     7a\n",
+            "1          2        B       2      8\n",
+            "2          1        C       1      4\n",
+            "3          1        B       4      4\n",
+            "4          2        A       5      2\n",
+            "5          1        A       2     ab\n",
+            "   Categoria  Ventas\n",
+            "0          1       6\n",
+            "2          1       1\n",
+            "3          1       4\n",
+            "5          1       2\n",
+            "          Categoria    Ventas\n",
+            "Producto                     \n",
+            "A          1.333333  4.333333\n",
+            "B          1.500000  3.000000\n",
+            "C          1.000000  1.000000\n",
+            "\n",
+            "\n",
+            "                    Ventas\n",
+            "Categoria Producto        \n",
+            "1         A              4\n",
+            "          B              4\n",
+            "          C              1\n",
+            "2         A              5\n",
+            "          B              2\n",
+            "          Categoria  Ventas\n",
+            "Producto                   \n",
+            "A                 4      13\n",
+            "B                 3       6\n",
+            "C                 1       1\n",
+            "Producto\n",
+            "A    13\n",
+            "B     6\n",
+            "C     1\n",
+            "Name: Ventas, dtype: int64\n",
+            "Producto  Categoria\n",
+            "A         1            8\n",
+            "          2            5\n",
+            "B         1            4\n",
+            "          2            2\n",
+            "C         1            1\n",
+            "Name: Ventas, dtype: int64\n",
+            "Producto\n",
+            "A    5.0\n",
+            "B    2.0\n",
+            "C    NaN\n",
+            "Name: 2, dtype: float64\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -212,36 +372,154 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9479be22-4f4a-4760-a926-5bae5984a272"
+        "id": "bZ70cdg0i1qp"
       },
       "source": [
+        "from google.colab import files\n",
+        "uploaded = files.upload()"
+      ],
+      "id": "bZ70cdg0i1qp",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9479be22-4f4a-4760-a926-5bae5984a272",
+        "outputId": "722d2227-fa86-4d26-a2fa-a9dd57ba95d6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "\n",
+        "\n",
         "df_poblacion = pd.read_csv('3.1.4-poblacion.csv')\n",
         "\n",
-        "##  field country as  index  \n",
-        "df_poblacion.set_index(['Country'])\n",
-        "df_un_indice = df_poblacion.set_index(['Country'])\n",
-        "##df_poblacion\n",
-        "df_un_indice\n",
-        "##### fields country, years  as  index  \n",
-        "df_multi_indice = df_poblacion.set_index(['Country', 'year'])\n",
-        "##df_multi_indice \n",
-        "df_multi_indice = df_multi_indice.sort_index()\n",
-        "df_multi_indice \n",
-        "#print(df_multi_indice)\n",
         "\n",
-        "##print(df_multi_indice.xs(['Colombia']))\n",
+        "##field Country as  index  \n",
+        "df_poblacion.set_index(['Country'])\n",
+        "\n",
+        "df_un_indice = df_poblacion.set_index(['Country'])\n",
+        "print (df_poblacion)\n",
+        "print (df_un_indice)\n",
+        "##### fields country, years  as  index  \n",
+        "#df_multi_indice = df_poblacion.set_index(['Country', 'year'])\n",
+        "#print (df_multi_indice )   \n",
+        "#df_multi_indice = df_multi_indice.sort_index()\n",
+        "#df_multi_indice \n",
+        "print(df_multi_indice)\n",
+        "\n",
+        "#print(df_multi_indice.xs(['Colombia']))\n",
         "#print(df_multi_indice.xs('Zimbabwe'))\n",
         "##print(df_multi_indice.loc[pd.IndexSlice['Chile': 'Cuba', '2015': '2017'], :].sort_index())\n",
         "\n",
         "print(df_multi_indice.sum(level = 'year'))\n",
         "\n",
-        "print (df_multi_indice.groupby(level=0).sum())\n",
+        "print (df_multi_indice.groupby(level=1).sum())\n",
         "\n",
+        "\n",
+        "print(df_multi_indice.loc[pd.IndexSlice['Chile': 'Cuba', '2015': '2017'], :].sort_index())\n",
         "\n"
       ],
       "id": "9479be22-4f4a-4760-a926-5bae5984a272",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "                       Country  year           pop\n",
+            "0                  Afghanistan  2015  3.441360e+07\n",
+            "1                      Albania  2015  2.880703e+06\n",
+            "2                      Algeria  2015  3.972802e+07\n",
+            "3               American Samoa  2015  5.581200e+04\n",
+            "4                      Andorra  2015  7.801100e+04\n",
+            "...                        ...   ...           ...\n",
+            "1035  Pre-demographic dividend  2018  9.194854e+08\n",
+            "1036              Small states  2018  4.057532e+07\n",
+            "1037                South Asia  2018  1.814389e+09\n",
+            "1038   South Asia (IDA & IBRD)  2018  1.814389e+09\n",
+            "1039        Sub-Saharan Africa  2018  1.078307e+09\n",
+            "\n",
+            "[1040 rows x 3 columns]\n",
+            "                          year           pop\n",
+            "Country                                     \n",
+            "Afghanistan               2015  3.441360e+07\n",
+            "Albania                   2015  2.880703e+06\n",
+            "Algeria                   2015  3.972802e+07\n",
+            "American Samoa            2015  5.581200e+04\n",
+            "Andorra                   2015  7.801100e+04\n",
+            "...                        ...           ...\n",
+            "Pre-demographic dividend  2018  9.194854e+08\n",
+            "Small states              2018  4.057532e+07\n",
+            "South Asia                2018  1.814389e+09\n",
+            "South Asia (IDA & IBRD)   2018  1.814389e+09\n",
+            "Sub-Saharan Africa        2018  1.078307e+09\n",
+            "\n",
+            "[1040 rows x 2 columns]\n",
+            "                         pop\n",
+            "Country     year            \n",
+            "Afghanistan 2015  34413603.0\n",
+            "            2016  35383128.0\n",
+            "            2017  36296400.0\n",
+            "            2018  37172386.0\n",
+            "Albania     2015   2880703.0\n",
+            "...                      ...\n",
+            "Zambia      2018  17351822.0\n",
+            "Zimbabwe    2015  13814629.0\n",
+            "            2016  14030390.0\n",
+            "            2017  14236745.0\n",
+            "            2018  14439018.0\n",
+            "\n",
+            "[1040 rows x 1 columns]\n",
+            "               pop\n",
+            "year              \n",
+            "2015  6.567915e+10\n",
+            "2016  6.648793e+10\n",
+            "2017  6.729418e+10\n",
+            "2018  6.808789e+10\n",
+            "               pop\n",
+            "year              \n",
+            "2015  6.567915e+10\n",
+            "2016  6.648793e+10\n",
+            "2017  6.729418e+10\n",
+            "2018  6.808789e+10\n",
+            "                                pop\n",
+            "Country          year              \n",
+            "Chile            2015  1.796935e+07\n",
+            "                 2016  1.820907e+07\n",
+            "                 2017  1.847044e+07\n",
+            "China            2015  1.371220e+09\n",
+            "                 2016  1.378665e+09\n",
+            "                 2017  1.386395e+09\n",
+            "Colombia         2015  4.752067e+07\n",
+            "                 2016  4.817139e+07\n",
+            "                 2017  4.890107e+07\n",
+            "Comoros          2015  7.774240e+05\n",
+            "                 2016  7.955920e+05\n",
+            "                 2017  8.138920e+05\n",
+            "Congo, Dem. Rep. 2015  7.624454e+07\n",
+            "                 2016  7.878913e+07\n",
+            "                 2017  8.139876e+07\n",
+            "Congo, Rep.      2015  4.856095e+06\n",
+            "                 2016  4.980999e+06\n",
+            "                 2017  5.110702e+06\n",
+            "Costa Rica       2015  4.847804e+06\n",
+            "                 2016  4.899345e+06\n",
+            "                 2017  4.949954e+06\n",
+            "Cote d'Ivoire    2015  2.322614e+07\n",
+            "                 2016  2.382271e+07\n",
+            "                 2017  2.443747e+07\n",
+            "Croatia          2015  4.203604e+06\n",
+            "                 2016  4.174349e+06\n",
+            "                 2017  4.124531e+06\n",
+            "Cuba             2015  1.132478e+07\n",
+            "                 2016  1.133511e+07\n",
+            "                 2017  1.133926e+07\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
