--- a/Taller4_dataframes_py.ipynb
+++ b/Taller4_dataframes_py.ipynb
@@ -895,6 +895,18 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "9m52W8SPkxjD"
+      },
+      "source": [
+        ""
+      ],
+      "id": "9m52W8SPkxjD",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "ATM5zDJog0M-"
       },
       "source": [
@@ -923,10 +935,10 @@
             }
           },
           "base_uri": "https://localhost:8080/",
-          "height": 73
+          "height": 72
         },
         "id": "QWhW8JcZg5Xm",
-        "outputId": "85b9029e-969d-4f88-9ed1-059db6beeb34"
+        "outputId": "7f0fdda4-6cfa-4741-a376-98694e5124e6"
       },
       "source": [
         "import pandas as pd\n",
@@ -935,16 +947,16 @@
         "uploaded = files.upload()\n"
       ],
       "id": "QWhW8JcZg5Xm",
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-b24ccdfc-0646-4995-960f-6a483a590ef6\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-4d206ee3-289d-480d-89ad-188e365865c7\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-b24ccdfc-0646-4995-960f-6a483a590ef6\">\n",
+              "     <output id=\"result-4d206ee3-289d-480d-89ad-188e365865c7\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -969,10 +981,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "29hX0XGNhT7U",
-        "outputId": "fc9e4fca-90db-411e-f684-457ecf479e94",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b069c4d2-aa1c-4921-a956-2fc43b5e239b"
       },
       "source": [
         "df_titanic = pd.read_csv('3.1.16-titanic.csv')\n",
@@ -986,7 +998,7 @@
         "#df_titanic.describe()"
       ],
       "id": "29hX0XGNhT7U",
-      "execution_count": 14,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -1055,17 +1067,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "vsW48fGsj3OP",
-        "outputId": "598a0615-d9ae-4a71-e134-bb2cd6fd0f6e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "598a0615-d9ae-4a71-e134-bb2cd6fd0f6e"
       },
       "source": [
         "print(df_titanic [['Name' , 'Sex','PassengerId']] [df_titanic[\"PassengerId\"]==100])\n",
         "print(df_titanic.loc[99])\n"
       ],
       "id": "vsW48fGsj3OP",
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1094,10 +1106,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "aQwdOTKQnRgQ",
-        "outputId": "9c699036-4e7c-435a-a7c9-9d1087b9ecdf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9c699036-4e7c-435a-a7c9-9d1087b9ecdf"
       },
       "source": [
         "#df_titanic.iloc[0:5]\n",
@@ -1105,7 +1117,7 @@
         "print(df_titanic.iloc[range(1,df_titanic.shape[0],2)] )\n"
       ],
       "id": "aQwdOTKQnRgQ",
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1133,16 +1145,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "NOnd7e7YqVJ7",
-        "outputId": "5dbdb921-44ad-4bac-82fd-779a6623a127",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5dbdb921-44ad-4bac-82fd-779a6623a127"
       },
       "source": [
         "print(df_titanic [['Name' , 'Sex','Pclass']] [df_titanic[\"Pclass\"]==2].sort_values('Name',ascending=True))"
       ],
       "id": "NOnd7e7YqVJ7",
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1170,16 +1182,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "KO_ke6Psro-N",
-        "outputId": "1b6bee4e-dd70-46fe-c555-28b81e588a88",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "1b6bee4e-dd70-46fe-c555-28b81e588a88"
       },
       "source": [
         "print(df_titanic['Survived'].value_counts(normalize=True)*100)"
       ],
       "id": "KO_ke6Psro-N",
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1206,7 +1218,7 @@
         "print(df_titanic.groupby('Pclass')['Survived'].value_counts(normalize=True) * 100)\n"
       ],
       "id": "FnDTRL5Cs3Yb",
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1228,17 +1240,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "7JmBRm-tuWlb",
-        "outputId": "5f1d194e-9111-4dc1-8f6c-5a76b51968f2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5f1d194e-9111-4dc1-8f6c-5a76b51968f2"
       },
       "source": [
         "print(df_titanic['Age'].dropna())\n",
         "print(df_titanic.dropna(subset=['Age']))"
       ],
       "id": "7JmBRm-tuWlb",
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1293,26 +1305,146 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5A1P-oKRwa4M",
-        "outputId": "05abea33-1e23-4f9b-8589-ed5c836e2427"
+        "outputId": "6cec0d51-d59d-4959-ebf4-9b4f1e9f094c"
       },
       "source": [
         "#print(df_titanic['Survived'].value_counts(normalize=True)*100)\n",
         "#print(df_titanic.groupby('Pclass')['Survived'].value_counts(normalize=True) * 100)\n",
         "df_titanic_hombres = df_titanic [df_titanic[\"Sex\"]=='male']\n",
-        "print(df_titanic_hombres.groupby('Pclass')['Age'].mean())"
+        "print(df_titanic_hombres.groupby(['Pclass', 'Survived'])['Age'].mean())"
       ],
       "id": "5A1P-oKRwa4M",
-      "execution_count": 76,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Pclass\n",
-            "1    41.281386\n",
-            "2    30.740707\n",
-            "3    26.525476\n",
+            "Pclass  Survived\n",
+            "1       0           44.581967\n",
+            "        1           36.248000\n",
+            "2       0           33.369048\n",
+            "        1           16.022000\n",
+            "3       0           27.280374\n",
+            "        1           22.274211\n",
             "Name: Age, dtype: float64\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bCQol-hxk1Qc",
+        "outputId": "7e405701-2585-44b6-b2da-8afb9a84493a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "print (df_titanic['Age'] )\n",
+        "df_titanic['Age'] <18\n",
+        "df_titanic ['mayorEdad'] = df_titanic ['Age'] < 18\n",
+        "\n",
+        "print (df_titanic[['Age' , 'mayorEdad']]  [ df_titanic['Age'] < 18]  )\n",
+        "\n",
+        "#print(df_titanic.max())\n",
+        "df_titanic['Age'].max() \n",
+        "df_titanic.max()\n",
+        "## 9) Imprimir el porcentaje de menores y mayores de edad que sobrevivieron en cada clase.\n",
+        "print(df_titanic.groupby(['Pclass', 'mayorEdad'])['Survived'].value_counts(normalize=True) * 100)\n",
+        "\n",
+        "print(df_titanic.groupby(['Pclass', 'mayorEdad'])['Survived'].value_counts(normalize=True).unstack()[1] * 100  )\n",
+        "\n",
+        "print(df_titanic.groupby(['Pclass', 'Survived'])['mayorEdad'].value_counts(normalize=True) * 100  )\n",
+        "print(df_titanic.groupby(['Pclass', 'Survived'])['mayorEdad'].value_counts(normalize=True).unstack()[1] * 100  )\n",
+        "print(df_titanic.groupby(['Pclass', 'Survived'])['mayorEdad'].value_counts(normalize=True).unstack()[0] * 100  )"
+      ],
+      "id": "bCQol-hxk1Qc",
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0       NaN\n",
+            "1      38.0\n",
+            "2      26.0\n",
+            "3      35.0\n",
+            "4      35.0\n",
+            "       ... \n",
+            "886    27.0\n",
+            "887    19.0\n",
+            "888     NaN\n",
+            "889    26.0\n",
+            "890    32.0\n",
+            "Name: Age, Length: 891, dtype: float64\n",
+            "      Age  mayorEdad\n",
+            "7     2.0       True\n",
+            "9    14.0       True\n",
+            "10    4.0       True\n",
+            "14   14.0       True\n",
+            "16    2.0       True\n",
+            "..    ...        ...\n",
+            "850   4.0       True\n",
+            "852   9.0       True\n",
+            "853  16.0       True\n",
+            "869   4.0       True\n",
+            "875  15.0       True\n",
+            "\n",
+            "[113 rows x 2 columns]\n",
+            "Pclass  mayorEdad  Survived\n",
+            "1       False      1           61.274510\n",
+            "                   0           38.725490\n",
+            "        True       1           91.666667\n",
+            "                   0            8.333333\n",
+            "2       False      0           59.006211\n",
+            "                   1           40.993789\n",
+            "        True       1           91.304348\n",
+            "                   0            8.695652\n",
+            "3       False      0           78.208232\n",
+            "                   1           21.791768\n",
+            "        True       0           62.820513\n",
+            "                   1           37.179487\n",
+            "Name: Survived, dtype: float64\n",
+            "Pclass  mayorEdad\n",
+            "1       False        61.274510\n",
+            "        True         91.666667\n",
+            "2       False        40.993789\n",
+            "        True         91.304348\n",
+            "3       False        21.791768\n",
+            "        True         37.179487\n",
+            "Name: 1, dtype: float64\n",
+            "Pclass  Survived  mayorEdad\n",
+            "1       0         False        98.750000\n",
+            "                  True          1.250000\n",
+            "        1         False        91.911765\n",
+            "                  True          8.088235\n",
+            "2       0         False        97.938144\n",
+            "                  True          2.061856\n",
+            "        1         False        75.862069\n",
+            "                  True         24.137931\n",
+            "3       0         False        86.827957\n",
+            "                  True         13.172043\n",
+            "        1         False        75.630252\n",
+            "                  True         24.369748\n",
+            "Name: mayorEdad, dtype: float64\n",
+            "Pclass  Survived\n",
+            "1       0            1.250000\n",
+            "        1            8.088235\n",
+            "2       0            2.061856\n",
+            "        1           24.137931\n",
+            "3       0           13.172043\n",
+            "        1           24.369748\n",
+            "Name: True, dtype: float64\n",
+            "Pclass  Survived\n",
+            "1       0           98.750000\n",
+            "        1           91.911765\n",
+            "2       0           97.938144\n",
+            "        1           75.862069\n",
+            "3       0           86.827957\n",
+            "        1           75.630252\n",
+            "dtype: float64\n"
           ]
         }
       ]
