--- a/Taller4_dataframes_py.ipynb
+++ b/Taller4_dataframes_py.ipynb
@@ -938,7 +938,7 @@
           "height": 72
         },
         "id": "QWhW8JcZg5Xm",
-        "outputId": "7f0fdda4-6cfa-4741-a376-98694e5124e6"
+        "outputId": "04263b0a-1f2c-4588-b064-8a170213b91b"
       },
       "source": [
         "import pandas as pd\n",
@@ -954,9 +954,9 @@
           "data": {
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-4d206ee3-289d-480d-89ad-188e365865c7\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-8fffffd3-ccd9-4d1b-8b6b-547045b441a3\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-4d206ee3-289d-480d-89ad-188e365865c7\">\n",
+              "     <output id=\"result-8fffffd3-ccd9-4d1b-8b6b-547045b441a3\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -984,7 +984,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b069c4d2-aa1c-4921-a956-2fc43b5e239b"
+        "outputId": "e0e921ce-5ef9-4a03-9def-3217daa4b103"
       },
       "source": [
         "df_titanic = pd.read_csv('3.1.16-titanic.csv')\n",
@@ -1302,33 +1302,249 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 419
         },
         "id": "5A1P-oKRwa4M",
-        "outputId": "6cec0d51-d59d-4959-ebf4-9b4f1e9f094c"
+        "outputId": "df6ee67b-5627-4356-ccf1-4b8c7157593f"
       },
       "source": [
         "#print(df_titanic['Survived'].value_counts(normalize=True)*100)\n",
         "#print(df_titanic.groupby('Pclass')['Survived'].value_counts(normalize=True) * 100)\n",
-        "df_titanic_hombres = df_titanic [df_titanic[\"Sex\"]=='male']\n",
-        "print(df_titanic_hombres.groupby(['Pclass', 'Survived'])['Age'].mean())"
+        "values= [ 'female']\n",
+        "df_titanic[~df_titanic.Sex.isin(values)]\n",
+        "##df_titanic_hombres = df_titanic [df_titanic[\"Sex\"]=='male']\n",
+        "##print(df_titanic_hombres.groupby(['Pclass', 'Survived'])['Age'].mean())"
       ],
       "id": "5A1P-oKRwa4M",
-      "execution_count": 30,
+      "execution_count": 5,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Pclass  Survived\n",
-            "1       0           44.581967\n",
-            "        1           36.248000\n",
-            "2       0           33.369048\n",
-            "        1           16.022000\n",
-            "3       0           27.280374\n",
-            "        1           22.274211\n",
-            "Name: Age, dtype: float64\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>PassengerId</th>\n",
+              "      <th>Survived</th>\n",
+              "      <th>Pclass</th>\n",
+              "      <th>Name</th>\n",
+              "      <th>Sex</th>\n",
+              "      <th>Age</th>\n",
+              "      <th>SibSp</th>\n",
+              "      <th>Parch</th>\n",
+              "      <th>Ticket</th>\n",
+              "      <th>Fare</th>\n",
+              "      <th>Cabin</th>\n",
+              "      <th>Embarked</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>3</td>\n",
+              "      <td>Braund, Mr. Owen Harris</td>\n",
+              "      <td>male</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>A/5 21171</td>\n",
+              "      <td>7.2500</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>S</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>5</td>\n",
+              "      <td>0</td>\n",
+              "      <td>3</td>\n",
+              "      <td>Allen, Mr. William Henry</td>\n",
+              "      <td>male</td>\n",
+              "      <td>35.0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>373450</td>\n",
+              "      <td>8.0500</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>S</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>6</td>\n",
+              "      <td>0</td>\n",
+              "      <td>3</td>\n",
+              "      <td>Moran, Mr. James</td>\n",
+              "      <td>male</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>330877</td>\n",
+              "      <td>8.4583</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>Q</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>7</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>McCarthy, Mr. Timothy J</td>\n",
+              "      <td>male</td>\n",
+              "      <td>54.0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>17463</td>\n",
+              "      <td>51.8625</td>\n",
+              "      <td>E46</td>\n",
+              "      <td>S</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>8</td>\n",
+              "      <td>0</td>\n",
+              "      <td>3</td>\n",
+              "      <td>Palsson, Master. Gosta Leonard</td>\n",
+              "      <td>male</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>3</td>\n",
+              "      <td>1</td>\n",
+              "      <td>349909</td>\n",
+              "      <td>21.0750</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>S</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>883</th>\n",
+              "      <td>884</td>\n",
+              "      <td>0</td>\n",
+              "      <td>2</td>\n",
+              "      <td>Banfield, Mr. Frederick James</td>\n",
+              "      <td>male</td>\n",
+              "      <td>28.0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>C.A./SOTON 34068</td>\n",
+              "      <td>10.5000</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>S</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>884</th>\n",
+              "      <td>885</td>\n",
+              "      <td>0</td>\n",
+              "      <td>3</td>\n",
+              "      <td>Sutehall, Mr. Henry Jr</td>\n",
+              "      <td>male</td>\n",
+              "      <td>25.0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>SOTON/OQ 392076</td>\n",
+              "      <td>7.0500</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>S</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>886</th>\n",
+              "      <td>887</td>\n",
+              "      <td>0</td>\n",
+              "      <td>2</td>\n",
+              "      <td>Montvila, Rev. Juozas</td>\n",
+              "      <td>male</td>\n",
+              "      <td>27.0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>211536</td>\n",
+              "      <td>13.0000</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>S</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>889</th>\n",
+              "      <td>890</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>Behr, Mr. Karl Howell</td>\n",
+              "      <td>male</td>\n",
+              "      <td>26.0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>111369</td>\n",
+              "      <td>30.0000</td>\n",
+              "      <td>C148</td>\n",
+              "      <td>C</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>890</th>\n",
+              "      <td>891</td>\n",
+              "      <td>0</td>\n",
+              "      <td>3</td>\n",
+              "      <td>Dooley, Mr. Patrick</td>\n",
+              "      <td>male</td>\n",
+              "      <td>32.0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>370376</td>\n",
+              "      <td>7.7500</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>Q</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>577 rows × 12 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "     PassengerId  Survived  Pclass  ...     Fare Cabin  Embarked\n",
+              "0              1         0       3  ...   7.2500   NaN         S\n",
+              "4              5         0       3  ...   8.0500   NaN         S\n",
+              "5              6         0       3  ...   8.4583   NaN         Q\n",
+              "6              7         0       1  ...  51.8625   E46         S\n",
+              "7              8         0       3  ...  21.0750   NaN         S\n",
+              "..           ...       ...     ...  ...      ...   ...       ...\n",
+              "883          884         0       2  ...  10.5000   NaN         S\n",
+              "884          885         0       3  ...   7.0500   NaN         S\n",
+              "886          887         0       2  ...  13.0000   NaN         S\n",
+              "889          890         1       1  ...  30.0000  C148         C\n",
+              "890          891         0       3  ...   7.7500   NaN         Q\n",
+              "\n",
+              "[577 rows x 12 columns]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
         }
       ]
     },
@@ -1336,10 +1552,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "bCQol-hxk1Qc",
-        "outputId": "7e405701-2585-44b6-b2da-8afb9a84493a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "7e405701-2585-44b6-b2da-8afb9a84493a"
       },
       "source": [
         "print (df_titanic['Age'] )\n",
@@ -1361,7 +1577,7 @@
         "print(df_titanic.groupby(['Pclass', 'Survived'])['mayorEdad'].value_counts(normalize=True).unstack()[0] * 100  )"
       ],
       "id": "bCQol-hxk1Qc",
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
