--- a/Pandas_carga_files.ipynb
+++ b/Pandas_carga_files.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled17.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOWkPhGxX2gpQR0wqDulsoQ",
+      "authorship_tag": "ABX9TyPCdvk1IhOauh6SjBBae0U0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,7 +57,7 @@
         "from google.colab import files\n",
         "uploaded = files.upload()"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -96,7 +96,7 @@
         "import pandas as pd\n",
         "iris_df = pd.read_csv(\"Iris.csv\")"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -109,9 +109,9 @@
         "outputId": "7cc0ea37-6b59-4cf0-db6e-70b47c2a3b5c"
       },
       "source": [
-        "iris_df.shape"
+        "iris_df.shape ###"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
